Docker-compose implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-# DDBB
-spring.datasource.url=jdbc:postgresql://localhost:5432/notesdb
-spring.datasource.username=postgres
-spring.datasource.password=abc
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# DOCKER COMPOSE
+spring.docker.compose.lifecycle-management=start_and_stop
+spring.docker.compose.skip.in-tests=false
+spring.docker.compose.stop.timeout=10s
 
-# RABBITMQ
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+# FLYWAY
+spring.flyway.enabled=true
+spring.flyway.user=postgres
+spring.flyway.password=abc
+spring.flyway.locations=classpath:db/migration
 
+# QUEUE RABBITMQ
 notes.queue.name=cola1
-
-#docker run -d --restart always --name rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:3.9-management
