--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,11 @@
 			<artifactId>spring-web</artifactId>
 			<version>6.1.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-docker-compose</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
